// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxesWidget inline 1`] = `
<div
  className="form-group"
>
  <div
    className="bg-transparent border-0 custom-control custom-checkbox custom-control-inline"
  >
    <input
      aria-describedby="_id__error _id__description _id__help"
      autoFocus={true}
      checked={false}
      className="custom-control-input"
      disabled={true}
      id="_id-0"
      name="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="custom-control-label"
      htmlFor="_id-0"
      title=""
    >
      A
    </label>
  </div>
</div>
`;

exports[`CheckboxesWidget simple 1`] = `
<div
  className="form-group"
>
  <div
    className="bg-transparent border-0 custom-control custom-checkbox"
  >
    <input
      aria-describedby="_id__error _id__description _id__help"
      autoFocus={true}
      checked={false}
      className="custom-control-input"
      disabled={true}
      id="_id-0"
      name="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="custom-control-label"
      htmlFor="_id-0"
      title=""
    >
      A
    </label>
  </div>
</div>
`;
